# cocos2d-x-samples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  download-engine.py
libs/: config.json  format_template.py
libs/liquidfun/: Android.mk  CMakeLists.txt
samples/FantasyWarrior3D/: .cocos-project.json  .gitignore  .project  README.md  config.json
samples/FantasyWarrior3D/fbxConv/: fbx-conv_fixedbug
samples/FantasyWarrior3D/src/: AttackCommand.lua  BattleFieldUI.lua  BattleScene.lua  ChooseRoleScene.lua  GameMaster.lua  GlobalVariables.lua  HPCounter.lua  Helper.lua  LoadingScene.lua  MainMenuScene.lua  Manager.lua  MathV3.lua  MessageDispatchCenter.lua  ParticleManager.lua  main.lua
samples/GAFExamples/: .cocos-project.json  CMakeLists.txt  Examples.vcxproj  Examples.vcxproj.filters  GAFExamples.sln  readme.txt  setup.py  setup_win.bat
samples/GAFExamples/Classes/: AppController.h  AppController.mm  AppDelegate.cpp  AppDelegate.h  GafFeatures.cpp  GafFeatures.h  RootViewController.h  RootViewController.mm
samples/GAFExamples/Example.android/: .classpath  .cproject  .project  AndroidManifest.xml  build-cfg.json  build.xml  build_native.py  project.properties
samples/GAFExamples/Example.android/assets/cut_the_hope/: cut_the_hope.gaf
samples/GAFExamples/Example.android/assets/fireman_2014_sound/: fireman_2014_sound.gaf
samples/GAFExamples/Example.android/jni/: Android.mk
samples/GAFExamples/Example.android/res/values/: strings.xml
samples/GAFExamples/Example.android/src/org/cocos2dx/gafexample/: AppActivity.java
samples/GAFExamples/Example.ios/Example/: Example-Info.plist  main.m
samples/GAFExamples/Example.ios/Example.xcodeproj/: project.pbxproj
samples/GAFExamples/Example.ios/ExampleTests/: ExampleTests-Info.plist  ExampleTests.m
samples/GAFExamples/Example.win8.1-universal/: Example.sln
samples/GAFExamples/Example.win8.1-universal/App.Shared/: App.xaml  Example.Shared.vcxitems  Example.Shared.vcxitems.filters
samples/GAFExamples/Example.win8.1-universal/App.Windows/: Example.Windows.vcxproj  Example.Windows.vcxproj.filters  Package.appxmanifest
samples/GAFExamples/Example.win8.1-universal/App.WindowsPhone/: Example.WindowsPhone.vcxproj  Package.appxmanifest
samples/GAFExamples/Example.wp8-xaml/: Example.sln  GAFExamples.sln
samples/GAFExamples/Example.wp8-xaml/App/: App.xaml.cs  Example.csproj  GAFExamples.csproj  MainPage.xaml.cs
samples/GAFExamples/Example.wp8-xaml/App/Properties/: WMAppManifest.xml
samples/GAFExamples/Example.wp8-xaml/App/Resources/: AppResources.Designer.cs
samples/GAFExamples/Example.wp8-xaml/AppComponent/: ExampleComponent.vcxproj  ExampleComponent.vcxproj.filters  GAFExamplesComponent.vcxproj  GAFExamplesComponent.vcxproj.filters
samples/GAFExamples/Example.wp8-xaml/AppComponent/src/: Cocos2dRenderer.cpp  Direct3DInterop.cpp  Direct3DInterop.h  EditBoxEvent.cpp  pch.h
samples/KillBug/: .cocos-project.json  .project  config.json
samples/LiquidFun-EyeCandy/: CMakeLists.txt
samples/LiquidFun-Testbed/: CMakeLists.txt
samples/LiquidFun-Testbed/Classes/: AppDelegate.cpp  Box2dView.cpp  Box2dView.h  GLESDebugDraw.cpp  GLESDebugDraw.h  Test.h  TestEntries.cpp
samples/LiquidFun-Testbed/Classes/Tests/: Faucet.h  MultipleParticleSystems.h
samples/LiquidFun-Testbed/proj.android/: .project  AndroidManifest.xml  build.xml  build_native.py  project.properties
samples/LiquidFun-Testbed/proj.android/jni/: Android.mk  Application.mk
samples/LiquidFun-Testbed/proj.android/res/values/: strings.xml
samples/LiquidFun-Testbed/proj.android/src/org/cocos2dx/liquidfun_testbed/: AppActivity.java
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/: project.pbxproj
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/project.xcworkspace/xcshareddata/: LiquidFun-Testbed.xccheckout
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/project.xcworkspace/xcuserdata/riq.xcuserdatad/: UserInterfaceState.xcuserstate
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/project.xcworkspace/xcuserdata/rquesada.xcuserdatad/: UserInterfaceState.xcuserstate
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/xcuserdata/riq.xcuserdatad/xcschemes/: LiquidFun Mac.xcscheme  LiquidFun iOS.xcscheme  xcschememanagement.plist
samples/LiquidFun-Testbed/proj.ios_mac/LiquidFun-Testbed.xcodeproj/xcuserdata/rquesada.xcuserdatad/xcschemes/: LiquidFun Mac.xcscheme  LiquidFun iOS.xcscheme  LiquidFun-Testbed Mac.xcscheme  LiquidFun-Testbed iOS.xcscheme  xcschememanagement.plist
samples/LiquidFun-Testbed/proj.ios_mac/ios/: AppController.mm
samples/LiquidFun-Testbed/proj.win32/: LiquidFun-Testbed.sln  LiquidFun.vcxproj  LiquidFun.vcxproj.filters
samples/LiquidFun-Testbed/proj.win8.1-universal/: LiquidFun-Testbed.sln
samples/LiquidFun-Testbed/proj.win8.1-universal/App.Shared/: LiquidFun-Testbed.Shared.vcxitems  LiquidFun-Testbed.Shared.vcxitems.filters
samples/LiquidFun-Testbed/proj.win8.1-universal/App.Windows/: LiquidFun-Testbed.Windows.vcxproj  LiquidFun-Testbed.Windows.vcxproj.filters  Package.appxmanifest
samples/LiquidFun-Testbed/proj.win8.1-universal/App.WindowsPhone/: LiquidFun-Testbed.WindowsPhone.vcxproj  Package.appxmanifest
samples/LiquidFun-Testbed/proj.wp8-xaml/: LiquidFun-Testbed.sln
samples/LiquidFun-Testbed/proj.wp8-xaml/App/: LiquidFun-Testbed.csproj
samples/LiquidFun-Testbed/proj.wp8-xaml/App/Properties/: WMAppManifest.xml
samples/LiquidFun-Testbed/proj.wp8-xaml/App/Resources/: AppResources.resx
samples/LiquidFun-Testbed/proj.wp8-xaml/AppComponent/: LiquidFun-TestbedComponent.vcxproj  LiquidFun-TestbedComponent.vcxproj.filters
samples/LiquidFun-Testbed/proj.wp8-xaml/AppComponent/src/: DirectXBase.cpp  DirectXBase.h  DirectXHelper.h  pch.h
samples/MoonWarriors/: .cocos-project.json  index.html  manifest.webapp  project.json  simulator.html
samples/SwiftTetris/: .gitignore
(+258 files in other folders)
